Bug 1577198 - Catch potential bugs where we try to start a webm with a P-frame. r=bryce

Differential Revision: https://phabricator.services.mozilla.com/D95730